# rust-apache-age

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-template.md
examples/: all.rs  prepared_statements.rs  prepared_statements_async.rs
src/: age_client.rs  age_types.rs  constants.rs  docs.md  lib.rs  structures.rs  sync.rs  tokio.rs  tokio_sync_only.rs
src/age_client/: constants.rs  mod.rs  tokio.rs
src/serializers/: mod.rs  return_operation.rs  set_operation.rs
tests/: docker-compose.yml  path.rs  person-async.rs  person.rs  ser_return_operation.rs  ser_set_operation.rs
