[package]
name = "apache_age"
description = "Rust driver for the Apache AGE. Based on postgres package"
license = "Apache-2.0"
version = "0.6.2"
edition = "2021"
repository = "https://github.com/dzordzu/rust-apache-age.git"
authors = [ "Tomasz Durda" ]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "1.8.0"
postgres = "0.19.9"
postgres-types = { version = "0.2.8", features = ["derive", "with-serde_json-1"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio-postgres = "0.7.12"
async-trait = { version = "0.1.83", optional = true }
rand = "0.8.5"
tokio = { version = "1.41.0", optional = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["sync", "tokio"]
tokio = ["dep:async-trait", "dep:tokio"]
sync = []
serializers = []
